# random-char-gen

./: Cargo.toml  README.md
src/: main.rs
