[package]
name = "random-char-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getch-rs = "0.2.0"
proconio = "0.4.5"
rand_hc = "0.3.2"
text_io = "0.1.12"
rand_core = "0.6.4"
rand_isaac = "0.3.0"
rand = "0.8.5"